TEST_PROGRAMS/INVALID/Haitong_Yang/invalidInteger.min
#parsing error: invalid integer format

var x : int;
x = -0212;

